--- a/thank-you.html
+++ b/thank-you.html
@@ -5,39 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Index</title>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <head class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Logotipo</a>
+  <head class="header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+          <div class="container">
+              <a class="navbar-brand" href="./index.html">Logotipo</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Lo nuevo</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Otros</a>
-                  </li>
-                </ul>
+                  <ul class="navbar-nav me-auto mb-0 mb-lg-0">
+                      <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="./us.html">Nosotros</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="./products.html">Lo nuevo</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="./products.html">Otros</a>
+                      </li>
+                  </ul>
               </div>
-            </div>
-          </nav>
-        
+          </div>
+      </nav>
     </head>
-    <div class="container-fluid pr-0 pl-0">
+    <div class="container pr-0 pl-0">
         <div class="info-contact">
             <div class="title">
                 <h4>GRACIAS</h4>
@@ -66,5 +66,6 @@
             <a href="#" class="menu-item">ONE BERRY <span>Copyright 2021</span></a>
         </div>
     </footer>
+    <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
