feat: Refacto css

--- a/detail.html
+++ b/detail.html
@@ -71,17 +71,41 @@
                                 <ul>
                                     <li>
                                         <div class="talla-content">
-                                            <a class="talla talla1 rounded-circle active-button">S</a>
+                                            <label class="radio_talla radio-gradient__talla">
+                                                <span class="radio__input__talla">
+                                                  <input type="radio" name="radio-talla">
+                                                  <span class="radio__control__talla">S</span>
+                                                </span>
+                                                <!-- <span class="radio__label">Negro</span> -->
+                                            </label>
+                                            <!-- <a class="talla talla1 rounded-circle active-button">S</a> -->
                                         </div>
                                     </li>
                                     <li>
                                         <div class="talla-content">
-                                            <a class="talla talla1 rounded-circle">M</a>
+                                            <label class="radio_talla radio-gradient__talla">
+                                                <span class="radio__input__talla">
+                                                  <input type="radio" name="radio-talla">
+                                                  <span class="radio__control__talla">M</span>
+                                                </span>
+                                                <!-- <span class="radio__label">Negro</span> -->
+                                            </label>
+                                            <!-- <a class="talla talla1 rounded-circle">M</a> -->
                                         </div>
                                     </li>
                                     <li>
                                         <div class="talla-content">
-                                            <a class="talla talla1 rounded-circle">L</a>
+                                            <div class="talla-content">
+                                                <label class="radio_talla radio-gradient__talla">
+                                                    <span class="radio__input__talla">
+                                                      <input type="radio" name="radio-talla">
+                                                      <span class="radio__control__talla">L</span>
+                                                    </span>
+                                                    <!-- <span class="radio__label">Negro</span> -->
+                                                </label>
+                                                <!-- <a class="talla talla1 rounded-circle">M</a> -->
+                                            </div>
+                                            <!-- <a class="talla talla1 rounded-circle">L</a> -->
                                         </div>
                                     </li>
                                 </ul>
@@ -100,59 +124,59 @@
                                         <div class="color-content">
                                             <label class="radio radio-gradient">
                                                 <span class="radio__input">
-                                                  <input type="radio" name="radio">
+                                                  <input type="radio" name="radio-color">
                                                   <span class="radio__control radio__control1">
                                                       <img src="./image/check-talla.svg">
                                                   </span>
                                                 </span>
                                                 <span class="radio__label">Negro</span>
-                                              </label>
+                                            </label>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="color-content">
                                             <label class="radio radio-gradient">
                                                 <span class="radio__input">
-                                                  <input type="radio" name="radio">
+                                                  <input type="radio" name="radio-color">
                                                   <span class="radio__control radio__control2">
                                                     <img src="./image/check-talla.svg">
                                                   </span>
                                                 </span>
                                                 <span class="radio__label">Mango</span>
-                                              </label>
+                                            </label>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="color-content">
                                             <label class="radio radio-gradient">
                                                 <span class="radio__input">
-                                                  <input type="radio" name="radio">
+                                                  <input type="radio" name="radio-color">
                                                   <span class="radio__control radio__control3">
                                                     <img src="./image/check-talla.svg">
                                                   </span>
                                                 </span>
                                                 <span class="radio__label">Rojo</span>
-                                              </label>
+                                            </label>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="color-content">
                                             <label class="radio radio-gradient">
                                                 <span class="radio__input">
-                                                  <input type="radio" name="radio">
+                                                  <input type="radio" name="radio-color">
                                                   <span class="radio__control radio__control4">
                                                     <img src="./image/check-talla.svg">
                                                   </span>
                                                 </span>
                                                 <span class="radio__label">P. Rosa</span>
-                                              </label>
+                                            </label>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="color-content">
                                             <label class="radio radio-gradient">
                                                 <span class="radio__input">
-                                                  <input type="radio" name="radio">
+                                                  <input type="radio" name="radio-color">
                                                   <span class="radio__control radio__control5">
                                                     <img src="./image/check-talla.svg">
                                                   </span>
