fix: formtaeo de css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Index</title>
     <script type="text/javascript" src="https://cssrefresh.frebsite.nl/js/cssrefresh.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
     <!-- <script>
@@ -25,7 +25,7 @@
     </script> -->
 </head>
 <div class="web_login_background_opacity"></div>
-<body style="background-image: url(./image/fondo-1.jpg);background-repeat: no-repeat;width: 100%;background-size: cover;">
+<body style="background-image: url(./images/fondo-1.jpg);background-repeat: no-repeat;width: 100%;background-size: cover;">
     <head class="header">
         <div class="logo-home">
           <a class="logo" href="#">Logotipo</a>
@@ -49,10 +49,10 @@
     <footer class="footer-home">
         <div>
           <ul class="social-red">
-            <li><a href="#"><img src="./image/home-fb.svg"></a></li>
-            <li><a href="#"><img src="./image/home-ig.svg"></a></li>
-            <li><a href="#"><img src="./image/home-tik.svg"></a></li>
-            <li><a href="#"><img src="./image/home-wp.svg"></a></li>
+            <li><a href="#"><img src="./images/home-fb.svg"></a></li>
+            <li><a href="#"><img src="./images/home-ig.svg"></a></li>
+            <li><a href="#"><img src="./images/home-tik.svg"></a></li>
+            <li><a href="#"><img src="./images/home-wp.svg"></a></li>
           </ul>
         </div>
         <div class="copyright">
