--- a/register-thank-you.html
+++ b/register-thank-you.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Index</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -40,14 +40,17 @@
             </div>
         </div>
     </header>
-    <div class="wrapper-container-main wrapper-container-us">
-        <!-- <div class="info"> -->
-            <h4 class="title-type-h text-aling-left">nosotros</h4>
-            <!-- <p>...Déjanos tus datos!</p> -->
-        <!-- </div> -->
-        <div class="wrapper-us">
-            <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.                                                                                            Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. 
+    <div class="wrapper-container-main wrapper-container-contact">
+        <div class="wrapper-thank-you">
+            <h2 class="title-type-h">GRACIAS</h2>
+            <!-- <h2 class="title-type-h title-capitalize">fernanda</h2> -->
+            <p class="text-type-b">
+                Tu pedido fue enviado correctamente,
+                en breve nos pondremos en contacto.
+                <br>
+                No olvides enviar realizar el pago y enviar
+                tu voucher por via whatsapp con una foto
+                de tu  lista de pedido.
             </p>
         </div>
     </div>
