--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Index</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -40,16 +40,43 @@
             </div>
         </div>
     </header>
-    <div class="wrapper-container-main wrapper-container-us">
-        <!-- <div class="info"> -->
-            <h4 class="title-type-h text-aling-left">nosotros</h4>
-            <!-- <p>...Déjanos tus datos!</p> -->
-        <!-- </div> -->
-        <div class="wrapper-us">
-            <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.                                                                                            Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. 
-            </p>
-        </div>
+    <div class="wrapper-container-main wrapper-container-register">
+        <h4 class="title-type-h text-aling-center">REGISTRATE</h4>
+        <p class="text-type-e">Para realizar tu pedido</p>
+        <form class="form">
+            <div class="form-group">
+                <label for="" class="label label-a">NOMBRE</label>
+                <input type="text" class="form-control form-input form-input-a">
+            </div>
+            <div class="form-group">
+                <label for="" class="label label-a">CIUDAD</label>
+                <input type="text" class="form-control form-input form-input-a">
+            </div>
+            <div class="form-group">
+                <label for="" class="label label-a">TELÉFONO</label>
+                <input type="text" class="form-control form-input form-input-a">
+            </div>
+            <div class="form-group">
+                <label for="" class="label label-a">CORREO</label>
+                <input type="text" class="form-control form-input form-input-a">  
+            </div>
+            
+            <div class="wrapper-hr">
+                <hr>
+            </div>
+            <div class="form-group">
+                <label for="" class="label-a">INGRESA TU CONTRASEÑA</label>
+                <input type="password" class="form-control form-input form-input-a">  
+            </div>
+            <div class="form-group">
+                <label for="" class="label-a">CONFIRMAR CONTRASEÑA</label>
+                <input type="password" class="form-control form-input form-input-a">  
+            </div>
+            <div class="btn-form">
+                <button type="button" class="type-button-form type-button-form-a text-aling-center">REGISTRAR</button>
+            </div>
+            
+        </form>
     </div>
     <footer class="footer">
         <div>
