--- a/products.html
+++ b/products.html
@@ -11,95 +11,122 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <head class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">Logotipo</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-0 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+    <header class="header">
+        <div class="block-header">
+            <div class="block-logo"><a class="logo" href="#">Logotipo</a></div>
+            <div class="menu-toggler-button">
+                <div class="toggler-wrapper-button">
+                    <span class="toggler-icon"></span>
+                </div>
+            </div>
+            <div class="navbar-collapsex">
+                <div class="wrapper-menubar">
+                    <ul>
+                        <li >
+                            <a href="./index.html">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./us.html">Nosotros</a>
+                        <li >
+                            <a href="./us.html">Nosotros</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./products.html">Lo nuevo</a>
+                        <li >
+                            <a href="./products.html">Lo nuevo</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./products.html">Otros</a>
+                        <li >
+                            <a href="./products.html">Otros</a>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </nav>
-    </head>
-    <div class="container pr-0 pl-0 container-fluid-product">
-        <div class="info-product">
-            <div class="title">
-                <h4>MODELOS EXCLUSIVOS</h4>
-            </div>
-            <!-- <div class="description">
-                <p>...Déjanos tus datos!</p>
-            </div> -->
-        </div>
-        <div class="lst-products">
-            <div class="row">
-                <div class="col-12 col-sm-6 col-md-offset-4">
-                    <div class="block-product">
-                        <img src="./image/image1.jpg" >
-                        <h2>BLAZER <span>EMMA</span></h2>
-                        <h3>S/19.99</h3>
-                        <h5>Entrega: 24 horas</h5>
-                        <div class="block-btns">
-                            <a class="btn btn-primary btn-block" href="./detail.html">MAS DETALLES</a>
-                            <button type="button" class="btn btn-primary btn-block btn-active">COMPRAR</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-offset-4">
-                    <div class="block-product">
-                        <img src="./image/image1.jpg" >
-                        <h2>BLAZER <span>EMMA</span></h2>
-                        <h3>S/19.99</h3>
-                        <h5>Entrega: 24 horas</h5>
-                        <div class="block-btns">
-                            <a class="btn btn-primary btn-block" href="./detail.html">MAS DETALLES</a>
-                            <button type="button" class="btn btn-primary btn-block btn-active">COMPRAR</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <div class="block-product">
-                        <img src="./image/image1.jpg" >
-                        <h2>BLAZER <span>EMMA</span></h2>
-                        <h3>S/19.99</h3>
-                        <h5>Entrega: 24 horas</h5>
-                        <div class="block-btns">
-                            <a class="btn btn-primary btn-block" href="./detail.html">MAS DETALLES</a>
-                            <button type="button" class="btn btn-primary btn-block btn-active">COMPRAR</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <div class="block-product">
-                        <img src="./image/image1.jpg" >
-                        <h2>BLAZER <span>EMMA</span></h2>
-                        <h3>S/19.99</h3>
-                        <h5>Entrega: 24 horas</h5>
-                        <div class="block-btns">
-                            <a class="btn btn-primary btn-block" href="./detail.html">MAS DETALLES</a>
-                            <button type="button" class="btn btn-primary btn-block btn-active">COMPRAR</button>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
+    </header>
+    <div class="wrapper-container-main wrapper-container-products">
+        <div class="wrapper-center-product">
+            <h4 class="layout-title layout-type-title-a text-align-right">modelos exclusivos</h4>
+            <div class="wrapper-products">
+                <div class="rowx">
+                    <div class="">
+                        <div class="wrapper-product">
+                            <img class="resize-img" src="./images/image1.jpg" >
+                            <div class="wrapper-detail">
+                                <h2 class="product-title product-title-a">BLAZER <span>EMMA</span></h2>
+                                <h3 class="title-type-e">S/19.99</h3>
+                                <h5 class="title-type-d text-aling-left">Entrega: 24 horas</h5>
+                            </div>
+                            <div class="wrapper-btns">
+                                <a class="btn-product" href="./product.html">MAS DETALLES</a>
+                                <button type="button" class="btn-product btn-comprar">COMPRAR</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="rowx">
+                    <div class="">
+                        <div class="wrapper-product">
+                            <img class="resize-img" src="./images/image1.jpg" >
+                            <div class="wrapper-detail">
+                                <h2 class="product-title product-title-a">BLAZER <span>EMMA</span></h2>
+                                <h3 class="title-type-e">S/19.99</h3>
+                                <h5 class="title-type-d text-aling-left">Entrega: 24 horas</h5>
+                            </div>
+                            <div class="wrapper-btns">
+                                <a class="btn-product" href="./product.html">MAS DETALLES</a>
+                                <button type="button" class="btn-product btn-comprar">COMPRAR</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="rowx">
+                    <div class="">
+                        <div class="wrapper-product">
+                            <img class="resize-img" src="./images/image1.jpg" >
+                            <div class="wrapper-detail">
+                                <h2 class="product-title product-title-a">BLAZER <span>EMMA</span></h2>
+                                <h3 class="title-type-e">S/19.99</h3>
+                                <h5 class="title-type-d text-aling-left">Entrega: 24 horas</h5>
+                                <h6 class="title-type-f">Quedan</h6>
+                                <div class="time-expired">
+                                    <div class="time-expired-day">3 días</div>
+                                    <div class="time-expired-day">29 hrs</div>
+                                    <div class="time-expired-day">29 min</div>
+                                    <div class="time-expired-day">20 s</div>
+                                </div>
+                            </div>
+                            <div class="wrapper-btns">
+                                <a class="btn-product" href="./product.html">MAS DETALLES</a>
+                                <button type="button" class="btn-product btn-reservar">RESERVAR</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="rowx">
+                    <div class="">
+                        <div class="wrapper-product">
+                            <img class="resize-img" src="./images/image1.jpg" >
+                            <div class="wrapper-detail">
+                                <h2 class="product-title product-title-a">BLAZER <span>EMMA</span></h2>
+                                <h3 class="title-type-e">S/19.99</h3>
+                                <h5 class="title-type-d text-aling-left">Entrega: 24 horas</h5>
+                                <h6 class="title-type-f">Quedan</h6>
+                                <div class="time-expired">
+                                    <div class="time-expired-day">3 días</div>
+                                    <div class="time-expired-day">29 hrs</div>
+                                    <div class="time-expired-day">29 min</div>
+                                    <div class="time-expired-day">20 s</div>
+                                </div>
+                            </div>
+                            <div class="wrapper-btns">
+                                <a class="btn-product" href="./product.html">MAS DETALLES</a>
+                                <button type="button" class="btn-product btn-reservar">RESERVAR</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+        </div>
 
-
+        <div style="clear: both;"></div> 
     </div>
     <footer class="footer">
         <div>
@@ -109,16 +136,17 @@
         </div>
         <div>
             <ul class="social-red">
-                <li><a href="#"><img src="./image/Vector-1.svg"></a></li>
-                <li><a href="#"><img src="./image/Vector-2.svg"></a></li>
-                <li><a href="#"><img src="./image/Vector-3.svg"></a></li>
-                <li><a href="#"><img src="./image/Vector-4.svg"></a></li>
+                <li><a href="#"><img src="./images/Vector-1.svg"></a></li>
+                <li><a href="#"><img src="./images/Vector-2.svg"></a></li>
+                <li><a href="#"><img src="./images/Vector-3.svg"></a></li>
+                <li><a href="#"><img src="./images/Vector-4.svg"></a></li>
             </ul>
         </div>
         <div class="copyright">
             <a href="#" class="menu-item">ONE BERRY <span>Copyright 2021</span></a>
         </div>
     </footer>
+    <div style="clear: both;"></div> 
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
