--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- <script>
+    <script>
       (function() {
         var h, a, f;
         a = document.getElementsByTagName('link');
@@ -22,7 +22,8 @@
             }
         } // for
       })()   
-    </script> -->
+
+    </script>
 </head>
 <div class="web_login_background_opacity"></div>
 <body style="background-image: url(./images/fondo-1.jpg);background-repeat: no-repeat;width: 100%;background-size: cover;">
